# orbitsim

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: 00-OVERVIEW.md  01-physics-core.md  02-rendering-scale.md  03-sandbox-maneuvers.md  04-transfers-optimizer.md  05-real-solar-system.md  06-polish-packaging.md  BEGINNERS-GUIDE.md  PHYSICS_AUDIT.md  PLAIN-ENGLISH.md  PLAYING.md  VIRTUAL-TOUR.md
orbitsim/: __init__.py  __main__.py
orbitsim/core/: __init__.py  attitude.py  bodies.py  constants.py  elements.py  encounters.py  ephemeris.py  flight.py  flyby.py  frames.py  kepler.py  maneuvers.py  moon.py  nbody.py  optimize.py  patched_conics.py  planets.py  propagate.py  rendezvous.py  state.py  transfers.py
orbitsim/render/: __init__.py  app.py  camera_rig.py  earth.py  floating_origin.py  geometry.py  keybind_overlay.py  map_view.py  navball.py  orbit_lines.py  picking.py  porkchop.py  sas_panel.py  settings_panel.py  ship_model.py  skybox.py  targets.py  textures.py  trajectory_sampling.py  world_labels.py  world_markers.py
orbitsim/sim/: __init__.py  clock.py  persistence.py  world.py
tests/core/: __init__.py  test_attitude.py  test_bodies.py  test_constants.py  test_elements.py  test_encounters.py  test_ephemeris.py  test_flight.py  test_flyby.py  test_frames.py  test_kepler.py  test_maneuvers.py  test_moon.py  test_nbody.py  test_optimize.py  test_patched_conics.py  test_planets.py  test_propagate.py  test_rendezvous.py  test_smoke.py  test_state.py  test_transfers.py
(+77 files in other folders)
