[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitsim"
version = "0.1.0"
description = "A realistic 3D orbital mechanics simulator/game for desktop"
authors = [{name = "Josef Habich", email = "jwhabich@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "astropy>=5.3.0",
    "hypothesis>=6.75.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "black>=23.0.0",
]
render = [
    "panda3d>=1.10.0",
    "skyfield>=1.45.0",
    "lamberthub>=0.1.0",
]

[project.scripts]
orbitsim = "orbitsim.__main__:main"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
